--- a/about/index.html
+++ b/about/index.html
@@ -2,13 +2,15 @@
 <html lang="en">
 <head>
 	<meta charset="UTF-8">
-	<title>About Juan Lopez</title>
+	<title>Sobre mi</title>
 	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
 	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-modal/2.2.6/css/bootstrap-modal.min.css">
 	<link rel="stylesheet" href="../css/master.css">
 	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/semantic-ui/2.2.13/components/icon.min.css">
 	<link href="https://fonts.googleapis.com/css?family=Nixie+One" rel="stylesheet"> 
 	<link rel="stylesheet" href="../css/animations.css">
+	<meta name="viewport" content="width=device-width, initial-scale=1.0">
+
 
 
 </head>
