--- a/index.html
+++ b/index.html
@@ -11,17 +11,21 @@
 	<link href="https://fonts.googleapis.com/css?family=Yesteryear" rel="stylesheet"> 
 	<link href="https://fonts.googleapis.com/css?family=Mr+Dafoe|Niconne|Parisienne|Pinyon+Script|Yesteryear" rel="stylesheet">
 	<link rel="stylesheet" href="css/animations.css">
+	<meta name="viewport" content="width=device-width, initial-scale=1.0">
+
 
 
 
 </head>
 
 <body class="animated">
-	<div class="main-banner">
 
+	<div class="loader">
+		
+	</div>
+	<div class="main-banner">
 		<div class="container-fluid">
 		<div>
-
 			<ul>
 				<div class="row text-center">
 					<div class="col col-lg-2">
