--- a/skills/index.html
+++ b/skills/index.html
@@ -8,6 +8,8 @@
 	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/semantic-ui/2.2.13/components/icon.min.css">
 	<link href="https://fonts.googleapis.com/css?family=Nixie+One" rel="stylesheet"> 
 	<link rel="stylesheet" href="../css/animations.css">
+	<meta name="viewport" content="width=device-width, initial-scale=1.0">
+
 </head>
 <body class="animated fadeIn">
 	<nav class="hide-on-med-and-down">
@@ -170,7 +172,7 @@
 					</li>
 					<li>
 						<div class="row">
-							<div class="col col-lg-6"><img src="" alt=""><span>Git</span></div>
+							<div class="col col-lg-6"><img class="img-responsive img-skills" src="../img/git.png" alt=""><span>Git</span></div>
 							<div class="col col-lg-6">
 								<div class="bar">
 									<div id="github"></div>
@@ -180,7 +182,7 @@
 					</li>
 					<li>
 						<div class="row">
-							<div class="col col-lg-6"><img src="" alt=""><span>Photoshop</span></div>
+							<div class="col col-lg-6"><img class="img-responsive img-skills" src="../img/photoshop.png" alt=""><span>Photoshop</span></div>
 							<div class="col col-lg-6">
 								<div class="bar">
 									<div id="photoshop"></div>
@@ -190,7 +192,7 @@
 					</li>
 					<li>
 						<div class="row">
-							<div class="col col-lg-6"><img src="" alt=""><span>Vue</span></div>
+							<div class="col col-lg-6"><img class="img-responsive img-skills" src="../img/vue.png" alt=""><span>Vue</span></div>
 							<div class="col col-lg-6">
 								<div class="bar" >
 									<div id="vue"></div>
