--- a/works/index.html
+++ b/works/index.html
@@ -8,6 +8,8 @@
 	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/semantic-ui/2.2.13/components/icon.min.css">
 	<link href="https://fonts.googleapis.com/css?family=Nixie+One" rel="stylesheet"> 
 	<link rel="stylesheet" href="../css/animations.css">
+	<meta name="viewport" content="width=device-width, initial-scale=1.0">
+
 </head>
 
 <body class="animated fadeIn">
@@ -99,7 +101,7 @@
 					</h1>
 					<div class="divider"></div>
 					<div class="col col-lg-6 col-sm-12">
-						<div class="work-block" id="tictac"></div>
+						<a href="https://juanlop9717.github.io/FCC-tictac" target="_blank"><div class="work-block" id="tictac"></div></a>
 						<div class="text-center">
 							<h2>Tic Tac Toe</h2>
 						<div class="btn" data-toggle="modal"  data-target="#myModal1">More information</div>
@@ -123,31 +125,31 @@
 						</div>
 					</div>
 					<div class="col col-lg-6 col-sm-12">
-						<div class="work-block" id="calc"></div>
+						<a href="https://juanlop9717.github.io/Fcc-Calculator" target="_blank"><div class="work-block" id="calc"></div></a>
 						<div class="text-center">
 							<h2>Calculator</h2>
-						<div class="btn" data-toggle="modal"  data-target="#myModal2">More information</div>
-						<div class="modal fade" id="myModal2" tabindex="-1" role="dialog" aria-labelledby="myModalLabel">
-		                          <div class="modal-dialog" role="document">
-		                             <div class="modal-content">
-		                                  <div class="modal-header">
-		                                    <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
-		                                    <h4 class="modal-title" id="myModalLabel">Calculator
-		                                    </h4>
-		                                  </div>
-		                                  <div class="modal-body">
-		                                      <p>Calculator is a project from FreeCodeCamp. It's a online calculator no more to add.</p>
-		                                  </div>
-		                                  <div class="modal-footer">
-		                                    <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
-		                                  </div>
-		                            </div>
-		                        </div>
-		                      </div>
-						</div>
+							<div class="btn" data-toggle="modal"  data-target="#myModal2">More information</div>
+							<div class="modal fade" id="myModal2" tabindex="-1" role="dialog" aria-labelledby="myModalLabel">
+			                          <div class="modal-dialog" role="document">
+			                             <div class="modal-content">
+			                                  <div class="modal-header">
+			                                    <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
+			                                    <h4 class="modal-title" id="myModalLabel">Calculator
+			                                    </h4>
+			                                  </div>
+			                                  <div class="modal-body">
+			                                      <p>Calculator is a project from FreeCodeCamp. It's a online calculator no more to add.</p>
+			                                  </div>
+			                                  <div class="modal-footer">
+			                                    <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
+			                                  </div>
+			                            </div>
+			                        </div>
+			                      </div>
+							</div>
 					</div>
 					<div class="col col-lg-6 col-sm-12">
-						<div class="work-block" id="twitch"></div>
+						<a href="https://juanlop9717.github.io/TwitchViewer" target="_blank"><div class="work-block" id="twitch"></div></a>
 						<div class="text-center">
 							<h2>Twitch Users Viewer</h2>
 						<div class="btn" data-toggle="modal"  data-target="#myModal3">More information</div>
@@ -171,7 +173,7 @@
 						</div>
 					</div>
 					<div class="col col-lg-6 col-sm-12">
-						<div class="work-block" id="weather"></div>
+						<a href="https://juanlop9717.github.io/WeatherViewer" target="_blank"><div class="work-block" id="weather"></div></a>
 						<div class="text-center">
 							<h2>Weather Viewer</h2>
 						<div class="btn" data-toggle="modal"  data-target="#myModal4">More information</div>
@@ -195,7 +197,7 @@
 						</div>
 					</div>
 					<div class="col col-lg-6 col-sm-12">
-						<div class="work-block" id="pomodoro"></div>
+						<a href="https://juanlop9717.github.io/FCC-Pomodoro" target="_blank"><div class="work-block" id="pomodoro"></div></a>
 						<div class="text-center">
 							<h2>Pomodoro timer</h2>
 						<div class="btn" data-toggle="modal"  data-target="#myModal5">More information</div>
@@ -219,7 +221,7 @@
 						</div>
 					</div>
 					<div class="col col-lg-6 col-sm-12">
-						<div class="work-block" id="simon"></div>
+						<a href="https://juanlop9717.github.io/SimonGame" target="_blank"><div class="work-block" id="simon"></div></a>
 						<div class="text-center">
 							<h2>Simon game</h2>
 						<div class="btn" data-toggle="modal"  data-target="#myModal6">More information</div>
@@ -243,29 +245,53 @@
 						</div>
 					</div>
 					<div class="col col-lg-6 col-sm-12">
-						<div class="work-block" id="quote"></div>
-						<div class="text-center">
-							<h2>Random Quote Generator</h2>
-						<div class="btn" data-toggle="modal"  data-target="#myModal6">More information</div>
-						<div class="modal fade" id="myModal6" tabindex="-1" role="dialog" aria-labelledby="myModalLabel">
-		                          <div class="modal-dialog" role="document">
-		                             <div class="modal-content">
-		                                  <div class="modal-header">
-		                                    <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
-		                                    <h4 class="modal-title" id="myModalLabel">Random Quote Generator
-		                                    </h4>
-		                                  </div>
-		                                  <div class="modal-body">
-		                                      <p>The original Simon Game online. begins with 4 buttons that you have to memorize in the game the order of the lights that will show every turn.</p>
-		                                  </div>
-		                                  <div class="modal-footer">
-		                                    <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
-		                                  </div>
-		                            </div>
-		                        </div>
-						</div>
+						<a href="https://juanlop9717.github.io/RandomQuote" target="_blank"><div class="work-block" id="quote"></div></a>
+							<div class="text-center">
+								<h2>Random Quote Generator</h2>
+							<div class="btn" data-toggle="modal"  data-target="#myModal6">More information</div>
+								<div class="modal fade" id="myModal6" tabindex="-1" role="dialog" aria-labelledby="myModalLabel">
+				                          <div class="modal-dialog" role="document">
+				                             <div class="modal-content">
+				                                  <div class="modal-header">
+				                                    <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
+				                                    <h4 class="modal-title" id="myModalLabel">Random Quote Generator
+				                                    </h4>
+				                                  </div>
+				                                  <div class="modal-body">
+				                                      <p>The original Simon Game online. begins with 4 buttons that you have to memorize in the game the order of the lights that will show every turn.</p>
+				                                  </div>
+				                                  <div class="modal-footer">
+				                                    <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
+				                                  </div>
+				                            </div>
+				                        </div>
+								</div>
+							</div>
 					</div>
-				</div>
+					<div class="col col-lg-6 col-sm-12">
+						<a href="https://juanlop9717.github.io/wikipediaviewer" target="_blank"><div class="work-block" id="wiki"></div></a>
+							<div class="text-center">
+								<h2>Wikipedia Viewer</h2>
+							<div class="btn" data-toggle="modal"  data-target="#myModal7">More information</div>
+								<div class="modal fade" id="myModal7" tabindex="-1" role="dialog" aria-labelledby="myModalLabel">
+				                          <div class="modal-dialog" role="document">
+				                             <div class="modal-content">
+				                                  <div class="modal-header">
+				                                    <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
+				                                    <h4 class="modal-title" id="myModalLabel">Random Quote Generator
+				                                    </h4>
+				                                  </div>
+				                                  <div class="modal-body">
+				                                      <p>A wikipedia viewer, you look for the article that you want and throught the wikipedia API you receive a link with the artcile that you chose.</p>
+				                                  </div>
+				                                  <div class="modal-footer">
+				                                    <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
+				                                  </div>
+				                            </div>
+				                        </div>
+								</div>
+							</div>
+					</div>
 			</div>
 		</div>
 	</main>
