--- a/works/index.html
+++ b/works/index.html
@@ -14,7 +14,6 @@
 
 <body class="animated fadeIn">
 
-
 	<div class="loader">
 		<div class="sk-circle">
 		  <div class="sk-circle1 sk-child"></div>
@@ -29,8 +28,18 @@
 		  <div class="sk-circle10 sk-child"></div>
 		  <div class="sk-circle11 sk-child"></div>
 		  <div class="sk-circle12 sk-child"></div>
+		  <br>
+		  <br>
+		  <br>
+		  <br>
+		  <br>
+		  <br>
+		  <br>
+		  <br>
+		  <br>
+		  <p class="text-center">Loading...</p>
 		</div>
-	</div>
+		</div>
 	<nav class="hide-on-med-and-down">
 		<div class="row">
 			<div class="col col-sm-3 col-xs-3 col text-center" id="menu">
@@ -334,7 +343,7 @@
     });
 
      $(window).on('load', function () {
-     $(".loader").fadeOut(800);
+     $(".loader").fadeOut(200);
  });
 
 
