--- a/contact/index.html
+++ b/contact/index.html
@@ -12,6 +12,32 @@
 
 </head>
 <body class="fadeIn animated">
+	<div class="loader">
+		<div class="sk-circle">
+  <div class="sk-circle1 sk-child"></div>
+  <div class="sk-circle2 sk-child"></div>
+  <div class="sk-circle3 sk-child"></div>
+  <div class="sk-circle4 sk-child"></div>
+  <div class="sk-circle5 sk-child"></div>
+  <div class="sk-circle6 sk-child"></div>
+  <div class="sk-circle7 sk-child"></div>
+  <div class="sk-circle8 sk-child"></div>
+  <div class="sk-circle9 sk-child"></div>
+  <div class="sk-circle10 sk-child"></div>
+  <div class="sk-circle11 sk-child"></div>
+  <div class="sk-circle12 sk-child"></div>
+  <br>
+  <br>
+  <br>
+  <br>
+  <br>
+  <br>
+  <br>
+  <br>
+  <br>
+  <p class="text-center">Loading...</p>
+</div>
+</div>
 	<nav class="hide-on-med-and-down">
 		<div class="row">
 			<div class="col col-sm-3 col-xs-3 col text-center" id="menu">
@@ -130,7 +156,10 @@
 
     $(".close-btn").click(function(){
         $(".mobile-menu2").hide(500);
-    })
+    });
+    $(window).on('load', function () {
+     $(".loader").fadeOut(200);
+ });
 
     </script> 
 </body>
