--- a/index.html
+++ b/index.html
@@ -34,6 +34,16 @@
   <div class="sk-circle10 sk-child"></div>
   <div class="sk-circle11 sk-child"></div>
   <div class="sk-circle12 sk-child"></div>
+  <br>
+  <br>
+  <br>
+  <br>
+  <br>
+  <br>
+  <br>
+  <br>
+  <br>
+  <p class="text-center">Loading...</p>
 </div>
 	</div>
 	<div class="main-banner">
