Add optimization changes

--- a/index.html
+++ b/index.html
@@ -3,23 +3,11 @@
 <head>
 	<meta charset="UTF-8">
 	<title>Juan Lopez</title>
-	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
-	<link rel="stylesheet" href="css/master.css">
-	<link rel="stylesheet" href="path/to/font-awesome/css/font-awesome.min.css">
-	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/semantic-ui/2.2.13/components/icon.min.css">
-	<link rel="stylesheet" href="css/hover.css">
 	<link href="https://fonts.googleapis.com/css?family=Yesteryear" rel="stylesheet"> 
-	<link href="https://fonts.googleapis.com/css?family=Mr+Dafoe|Niconne|Parisienne|Pinyon+Script|Yesteryear" rel="stylesheet">
-	<link rel="stylesheet" href="css/animations.css">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-
-
-
-
+	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/semantic-ui/2.2.13/components/icon.min.css">
 </head>
-
 <body class="animated">
-
 	<div class="loader">
 		<div class="sk-circle">
   <div class="sk-circle1 sk-child"></div>
@@ -185,7 +173,8 @@
 					</a>
 
 					<!-- Svg Works -->							
-					<svg
+					<a href="works/index.html">
+								<svg
 					   xmlns:dc="http://purl.org/dc/elements/1.1/"
 					   xmlns:cc="http://creativecommons.org/ns#"
 					   xmlns:rdf="http://www.w3.org/1999/02/22-rdf-syntax-ns#"
@@ -275,10 +264,11 @@
 					    </g>
 					  </g>
 					</svg>
+					</a>
 
 					<!-- SVG Skills -->
 									
-				<svg
+				<a href="skills/index.html"><svg
 				   xmlns:dc="http://purl.org/dc/elements/1.1/"
 				   xmlns:cc="http://creativecommons.org/ns#"
 				   xmlns:rdf="http://www.w3.org/1999/02/22-rdf-syntax-ns#"
@@ -439,10 +429,12 @@
 				  </g>
 
 				</svg>
+				</a>
 
 				<!--- SVG Contact -->
 
-				<svg
+				<a href="contact/index.html">
+					<svg
 				   xmlns:dc="http://purl.org/dc/elements/1.1/"
 				   xmlns:cc="http://creativecommons.org/ns#"
 				   xmlns:rdf="http://www.w3.org/1999/02/22-rdf-syntax-ns#"
@@ -548,15 +540,23 @@
 				    </g>
 				  </g>
 				</svg>
-			</div>
-			<div class="text-center hexagon-down">
+				</a>
+				<div class="text-center hexagon-down">
 				<span><a class="transition" href="about/index.html" id="aboutId1">About Me</a></span>
 				<span><a href="works/index.html">My works</a></span>
 				<span><a href="skills/index.html">Skills</a></span>
 				<span><a href="contact/index.html">Contact</a></span>
 			</div>
+			</div>
+			
 		</div>
 	</div>
+	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
+	<link rel="stylesheet" href="css/master.css">
+	<link rel="stylesheet" href="path/to/font-awesome/css/font-awesome.min.css">
+	
+	<link rel="stylesheet" href="css/hover.css">
+	<link rel="stylesheet" href="css/animations.css">
 	<script
 			  src="https://code.jquery.com/jquery-3.2.1.min.js"
 			  integrity="sha256-hwg4gsxgFZhOsEEamdOYGBf13FyQuiTwlAQgxVSNgt4="
