Add several changes

--- a/about/index.html
+++ b/about/index.html
@@ -5,10 +5,7 @@
 	<title>About me</title>
 	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
 	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-modal/2.2.6/css/bootstrap-modal.min.css">
-	<link rel="stylesheet" href="../css/master.css">
 	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/semantic-ui/2.2.13/components/icon.min.css">
-	<link href="https://fonts.googleapis.com/css?family=Nixie+One" rel="stylesheet"> 
-	<link rel="stylesheet" href="../css/animations.css">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 
 
@@ -96,7 +93,7 @@
 							<h2>Juan Miguel Lopez</h2>
 							<h4>Frontend Developer & Echonode Co-Founder</h4>
 							<p>
-							My name is Juan Miguel, I perform in the web development area especially in the frontend techonologies.
+							My name is Juan Miguel, I perform in the web development area, especially in the frontend techonologies.
 							I'm from Maracay, Venezuela. I am 19 years old and i'm studying computer enginering.
 							I'm looking to provide you with the best work!
 							</p>
@@ -113,12 +110,13 @@
 								<p class="text-center">
 									I've been in the web development world since 2015 when i started to learn some basics of Html and Css while i were studying. 
 									In that year i start to learn all the technologies that were necessary in order to be capable of making optimal websites.
-									Right Now i'm associated with another person in the project Echonode. At the same time i constantly keep learning and my recent course was the FreeCodeCamp run in which i have the Frontend Certficate.
+									Right Now i'm associated with another person in the project Echonode. I have a certificate of Frontend Developer from FreeCodeCamp course.
 								</p>
 							</div>
 							<div class="col col-md-12 col-lg-6 text-left">
 								<p class="text-center">
-										Actually i'm studying computer Enginering in the USB (Simon Bolivar University) in Venezuela. In this career i've learned some basics of the knowledeg that every developer must have. Some knowledge like Math, Discrete Math, Algorithms, Probabilities, Basic Physic, Boolean Logic, Database. etc. Due to the crisis i've had the need of migrate from Venezuela to Chile while the situacion become more secure. I intended to keep studying in Argentina and finish my degree of Engineer Computer.
+										Actually i'm studying computer Enginering in the USB (Simon Bolivar University) in Venezuela. In this career i've learned some basics of the knowledege that every developer must have. Some knowledge like Math, Discrete Math, Algorithms, Probabilities, Boolean Logic. etc.
+										In the upcoming years I'm looking to learn more in this career and finish my degree in the upcoming years.
 								</p>
 							</div>
 						</div>			
@@ -130,6 +128,8 @@
 			</div>
 		</div>
 	</main>
+	<link rel="stylesheet" href="../css/master.css">
+	<link rel="stylesheet" href="../css/animations.css">
 	<script
 			  src="https://code.jquery.com/jquery-3.2.1.min.js"
 			  integrity="sha256-hwg4gsxgFZhOsEEamdOYGBf13FyQuiTwlAQgxVSNgt4="
