--- a/skills/index.html
+++ b/skills/index.html
@@ -87,7 +87,7 @@
 				<h1>My skills</h1>
 				<div class="divider"></div>
 				<p>
-					You've been wondering of what i'm capable? I leave in this section a list of all technologies that i have a minimium knowledge required for the work. As well i leave a bar to rate from 1 to 5 the experience of the technologies.s
+					You've been wondering of what i'm capable? I leave in this section a list of all technologies that i have a minimium knowledge required for the work. 
 				</p>
 			</div>
 			<div class="rating-section">
