--- a/contact/index.html
+++ b/contact/index.html
@@ -118,7 +118,7 @@
 						</div>
 						<div class="col-lg-3 col-lg-offset-2 col-m col-sm-3" >
 							<a href="https://www.instagram.com/chonchass/" target="_blank">
-								<div class="work-block2 twitter" id="tuit">
+								<div class="work-block2 instagram" id="insta">
 								<i class="instagram icon big"></i>
 							</div>
 							</a>
