--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
 	<meta charset="UTF-8">
 	<title>Juan Lopez</title>
-	<link href="https://fonts.googleapis.com/css?family=Yesteryear" rel="stylesheet"> 
+	<link href="https://fonts.googleapis.com/css?family=Shrikhand|Suez+One|Yatra+One" rel="stylesheet"> 
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 
 </head>
