--- a/works/index.html
+++ b/works/index.html
@@ -119,7 +119,7 @@
 						</div>
 					</div>
 					<div class="col col-lg-6 col-sm-12">
-						<a href="https://juanlop9717.github.io/Fcc-Calculator" target="_blank"><div class="work-block" id="calc"></div></a>
+						<a href="https://juanlop9717.github.io/Fcc-Calculator/index.html" target="_blank"><div class="work-block" id="calc"></div></a>
 						<div class="text-center">
 							<h2>Calculator</h2>
 							<div class="btn" data-toggle="modal"  data-target="#myModal2">More information</div>
