Change all skills

--- a/skills/index.html
+++ b/skills/index.html
@@ -79,164 +79,108 @@
 		</div>
 	</nav>
 
-
-	
-	<main id="skills">
+	<main>
 		<div class="container">
 			<div class="intro text-center">
 				<h1>My skills</h1>
 				<div class="divider"></div>
 				<p>
-					You've been wondering of what i'm capable? I leave in this section a list of all technologies that i have a minimium knowledge required for the work. 
+					A list with all the technologies that i'm capable to use
 				</p>
 			</div>
-			<div class="rating-section">
-				<ul>
-					<li>
-						<div class="row">
-							<div class="col col-lg-6"><img class="img-responsive img-skills" src="../img/coding.svg" alt=""><span>Web development</span></div>
-							<div class="col col-lg-6">
-								<div class="bar" id="">
-									<div id="web-develop"></div>
-								</div>
-							</div>
-						</div>
-					</li>
-					<li>
-						<div class="row">
-							<div class="col col-lg-6"><img class="img-responsive img-skills" src="../img/monit.svg" alt=""><span>Web Design</span></div>
-							<div class="col col-lg-6">
-								<div class="bar">
-									<div id="web-design"></div>
-								</div>
-							</div>
-						</div>
-					</li>
-					<li>
-						<div class="row">
-							<div class="col col-lg-6"><img class="img-responsive img-skills" src="../img/smart.svg" alt=""><span>Responsive Design</span></div>
-							<div class="col col-lg-6">
-								<div class="bar">
-									<div id="responsive"></div>
-								</div>
-							</div>
-						</div>
-					</li>
-					<li>
-						<div class="row">
-							<div class="col col-lg-6"><img class="img-responsive img-skills" src="../img/html_css.png" id="css" alt=""><span>Html/Css</span></div>
-							<div class="col col-lg-6">
-								<div class="bar">
-									<div id="html"></div>
-								</div>
-							</div>
-						</div>
-					</li>
-					<li>
-						<div class="row">
-							<div class="col col-lg-6"><img src="../img/javascript.png" class="img-responsive img-skills" alt="" ><span>Javascript</span></div>
-							<div class="col col-lg-6">
-								<div class="bar">
-									<div id="javascript"></div>
-								</div>
-							</div>
-						</div>
-					</li>
-					<li>
-						<div class="row">
-							<div class="col col-lg-6"><img src="../img/jquery.png" class="img-responsive img-skills" alt="" ><span>Jquery</span></div>
-							<div class="col col-lg-6">
-								<div class="bar" >
-									<div id="jquery"></div>
-								</div>
-							</div>
-						</div>
-					</li>
-					
-					<li>
-						<div class="row">
-							<div class="col col-lg-6"><img src="../img/materialize.png" class="img-responsive img-skills" alt=""><span>Materialize</span></div>
-							<div class="col col-lg-6">
-								<div class="bar">
-									<div id="materialize"></div>
-								</div>
-							</div>
-						</div>
-					</li>
-					<li>
-						<div class="row">
-							<div class="col col-lg-6"><img src="../img/sass.svg" class="img-responsive img-skills" alt=""><span>Sass</span></div>
-							<div class="col col-lg-6">
-								<div class="bar">
-									<div id="sass"></div>
-								</div>
-							</div>
-						</div>
-					</li>
-					<li>
-						<div class="row">
-							<div class="col col-lg-6"><img  src="../img/boostrap.png" class="img-responsive img-skills"><span>Bootstrap</span></div>
-							<div class="col col-lg-6">
-								<div class="bar">
-									<div id="bootstrap"></div>
-								</div>
-							</div>
-						</div>
-					</li>
-					<li>
-						<div class="row">
-							<div class="col col-lg-6"><img class="img-responsive img-skills" src="../img/analytic.svg" alt=""><span>Analytic web</span></div>
-							<div class="col col-lg-6">
-								<div class="bar" >
-									<div id="analytics"></div>
-								</div>
-							</div>
-						</div>
-					</li>
-					<li>
-						<div class="row">
-							<div class="col col-lg-6"><img class="img-responsive img-skills" src="../img/git.png" alt=""><span>Git</span></div>
-							<div class="col col-lg-6">
-								<div class="bar">
-									<div id="github"></div>
-								</div>
-							</div>
-						</div>
-					</li>
-					<li>
-						<div class="row">
-							<div class="col col-lg-6"><img class="img-responsive img-skills" src="../img/photoshop.png" alt=""><span>Photoshop</span></div>
-							<div class="col col-lg-6">
-								<div class="bar">
-									<div id="photoshop"></div>
-								</div>
-							</div>
-						</div>
-					</li>
-					<li>
-						<div class="row">
-							<div class="col col-lg-6"><img class="img-responsive img-skills" src="../img/vue.png" alt=""><span>Vue</span></div>
-							<div class="col col-lg-6">
-								<div class="bar" >
-									<div id="vue"></div>
-								</div>
-							</div>
-						</div>
-					</li>
-					<li>
-						<div class="row">
-							<div class="col col-lg-6"><img src="../img/gulp.png" class="img-responsive img-skills" alt=""><span>Gulp</span></div>
-							<div class="col col-lg-6">
-								<div class="bar">
-									<div id="gulp"></div>
-								</div>
-							</div>
-						</div>
-					</li>
-				</ul>
+			<div class="row">
+				<div class="flex-skill-letra">
+					<div class="col-lg-3">
+						<h3>HTML5</h3>
+					</div>
+					<div class="col-lg-3">
+						<h3>CSS3</h3>
+					</div>
+					<div class="col-lg-3">
+						<h3>Javascript</h3>
+					</div>
+				</div>
+				<div class="flex-skill">
+					<div class="col-lg-3 col-s-12 col-sm-6 skill-box">
+						<img src="../img/html.png" class="img-responsive img-skills" alt="" >
+					</div>
+					<div class="col-lg-3 col-s-12 col-sm-6 skill-box">
+						<img src="../img/css3.png" class="img-responsive img-skills" alt="" >
+					</div>
+					<div class="col-lg-3 col-s-12 col-sm-6 skill-box">
+						<img src="../img/javascript.png" class="img-responsive img-skills" alt="" >
+					</div>
+				</div>
+				<div class="flex-skill-letra">
+					<div class="col-lg-3">
+						<h3>Jquery</h4>
+					</div>
+					<div class="col-lg-3">
+						<h3>Materialize</h4>
+					</div>
+					<div class="col-lg-3">
+						<h3>Bootstrap</h4>
+					</div>
+				</div>
+				<div class="flex-skill">
+					<div class="col-lg-3 col-s-12 col-sm-6 skill-box">
+					<img src="../img/jquery.png" class="img-responsive img-skills" alt="" >
+					</div>
+					<div class="col-lg-3 col-s-12 col-sm-6 skill-box">
+						<img src="../img/materialize.png" class="img-responsive img-skills" alt="">
+					</div>
+					<div class="col-lg-3 col-s-12 col-sm-6 skill-box">
+						<img  src="../img/boostrap.png" class="img-responsive img-skills">
+					</div>
+				</div>
+				<div class="flex-skill-letra">
+					<div class="col-lg-3">
+						<h3>Sass</h4>
+					</div>
+					<div class="col-lg-3">
+						<h3>Materialize</h4>
+					</div>
+					<div class="col-lg-3">
+						<h3>Bootstrap</h4>
+					</div>
+				</div>
+				<div class="flex-skill">
+					<div class="col-lg-3 col-s-12 col-sm-6 skill-box">
+					<img src="../img/sass.svg" class="img-responsive img-skills" alt="">
+					</div>
+					<div class="col-lg-3 col-s-12 col-sm-6 skill-box">
+						<img class="img-responsive img-skills" src="../img/git.png" alt="">
+					</div>
+					<div class="col-lg-3 col-s-12 col-sm-6 skill-box">
+						<img src="../img/gulp.png" class="img-responsive img-skills" alt="">
+					</div>
+				</div>
+				<div class="flex-skill-letra">
+					<div class="col-lg-3">
+						<h3>Photoshop</h4>
+					</div>
+					<div class="col-lg-3">
+						<h3>Vue JS</h4>
+					</div>
+					<div class="col-lg-3">
+						<h3>NodeJS</h4>
+					</div>
+				</div>
+				<div class="flex-skill">
+					<div class="col-lg-3 col-s-12 col-sm-6 skill-box">
+					<img class="img-responsive img-skills" src="../img/photoshop.png" alt="">
+					</div>
+					<div class="col-lg-3 col-s-12 col-sm-6 skill-box">
+						<img class="img-responsive img-skills" src="../img/vue.png" alt="">
+					</div>
+					<div class="col-lg-3 col-s-12 col-sm-6 skill-box" >
+						<img src="../img/nodejs.png" class="img-responsive img-skills" id="nodejs" alt="">
+					</div>
+				</div>
 			</div>
 		</div>
 	</main>
+	
 	<footer>
 		<p class="text-center">
 			Copyright Derechos reservados 2017
