--- a/works/index.html
+++ b/works/index.html
@@ -241,7 +241,7 @@
 						<a href="https://juanlop9717.github.io/RandomQuote" target="_blank"><div class="work-block" id="quote"></div></a>
 							<div class="text-center">
 								<h2>Random Quote Generator</h2>
-							<div class="btn" data-toggle="modal"  data-target="#myModal8">More information</div>
+							<div class="btn" data-toggle="modal"  data-target="#myModal">More information</div>
 								<div class="modal fade" id="myModal8" tabindex="-1" role="dialog" aria-labelledby="myModalLabel">
 				                          <div class="modal-dialog" role="document">
 				                             <div class="modal-content">
