--- a/skills/index.html
+++ b/skills/index.html
@@ -113,13 +113,13 @@
 				</div>
 				<div class="flex-skill-letra">
 					<div class="col-lg-3">
-						<h3>Jquery</h4>
+						<h3>Jquery</h3>
 					</div>
 					<div class="col-lg-3">
-						<h3>Materialize</h4>
+						<h3>Materialize</h3>
 					</div>
 					<div class="col-lg-3">
-						<h3>Bootstrap</h4>
+						<h3>Bootstrap</h3>
 					</div>
 				</div>
 				<div class="flex-skill">
@@ -135,13 +135,13 @@
 				</div>
 				<div class="flex-skill-letra">
 					<div class="col-lg-3">
-						<h3>Sass</h4>
+						<h3>Sass</h3>
 					</div>
 					<div class="col-lg-3">
-						<h3>Materialize</h4>
+						<h3>Git</h3>
 					</div>
 					<div class="col-lg-3">
-						<h3>Bootstrap</h4>
+						<h3>Gulp</h3>
 					</div>
 				</div>
 				<div class="flex-skill">
@@ -157,13 +157,13 @@
 				</div>
 				<div class="flex-skill-letra">
 					<div class="col-lg-3">
-						<h3>Photoshop</h4>
+						<h3>Photoshop</h3>
 					</div>
 					<div class="col-lg-3">
-						<h3>Vue JS</h4>
+						<h3>Vue JS</h3>
 					</div>
 					<div class="col-lg-3">
-						<h3>NodeJS</h4>
+						<h3>NodeJS</h3>
 					</div>
 				</div>
 				<div class="flex-skill">
