Fix issues on minor screen

--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
 	<meta name="theme-color" content="#ffffff">
 
 </head>
-<body class="animated">
+<body class="animated banner-body">
 	<div class="loader">
 		<div class="sk-circle">
   <div class="sk-circle1 sk-child"></div>
